# lite-editor

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md  index.html  package.json  pnpm-lock.yaml  rust-toolchain.toml  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
crates/nib-app/: Cargo.toml
crates/nib-app/assets/: icon.icns
crates/nib-app/src/: arthas_panel.rs  astore_panel.rs  diff_view.rs  file_icons.rs  git_panel.rs  main.rs  maven_panel.rs  merge_view.rs  preview.rs  quick_open.rs  recents_view.rs  search_panel.rs  session.rs  settings_view.rs  terminal_panel.rs  usages_view.rs
crates/nib-app/themes/: warm-earth.json
crates/nib-core/: Cargo.toml
crates/nib-core/src/: arthas.rs  arthas_run.rs  astore.rs  clipboard.rs  diff.rs  events.rs  fs.rs  git.rs  java_index.rs  lib.rs  lsp.rs  markdown.rs  maven.rs  paths.rs  rt.rs  search.rs  session.rs  terminal.rs  usage_index.rs  watch.rs
crates/nib-core/tests/: clipboard_pasteboard.rs  concurrency_stress.rs  git_timeout.rs  merge_resolve.rs  no_blocking_under_load.rs  watch_smoke.rs
docs/architecture-decision/: 001-editor-tech-stack.md
scripts/: bundle-nib.sh
src/: arthas-symbols.ts  arthas.ts  astore-panel.ts  changes-panel.ts  context-menu.ts  dialog.ts  diff-tabs.ts  diff-view.ts  editor-context-menu.ts  editor-language.ts  editor-search-panel.ts  editor-setup.ts  editor-theme.ts  file-icons.ts  file-ops.ts  file-tree.ts  flash-line.ts  git-blame-gutter.ts  git-panel.ts  lsp-manager.test.ts  lsp-manager.ts  lsp-navigation.test.ts  lsp-navigation.ts  main.ts  maven-helper.ts  md-preview.ts  merge-conflict.ts  panel.ts  perf-monitor.ts  project-manager.test.ts  project-manager.ts  recent-projects.ts  resize.ts  search.ts  settings-ui.ts  settings.ts  state.test.ts  state.ts  status-bar.ts  tabs.ts  (+5 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: astore.rs  clipboard.rs  commands.rs  git.rs  java_index.rs  lib.rs  lsp.rs  main.rs  maven.rs  terminal.rs  usage_index.rs
src-tauri/tests/: clipboard_pasteboard.rs  concurrency_stress.rs  git_timeout.rs  no_blocking_under_load.rs
src/styles/: main.css
