# Nib workspace:nib-core(UI 无关后端内核)+ nib-app(gpui 原生应用,M0b 加入)。
# src-tauri 刻意排除在外:独立 Cargo.lock,经 path 依赖引用 nib-core——
# 隔离 gpui 与 tauri 两棵依赖树,升 gpui rev 不扰动旧 app 构建(RFC v2 §3)。
[workspace]
resolver = "2"
members = ["crates/nib-core"]
exclude = ["src-tauri"]

[workspace.package]
edition = "2021"
rust-version = "1.85"

[profile.release]
lto = "thin"
codegen-units = 1
