# Nib workspace:nib-core(UI 无关后端内核)+ nib-app(gpui 原生应用)。
# 2026-06-11 M5 切换完成:旧 Tauri+TS 实现(src/、src-tauri/)已删除。
[workspace]
resolver = "2"
members = ["crates/nib-app", "crates/nib-core"]

[workspace.package]
edition = "2021"
rust-version = "1.85"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true        # 裁掉符号:二进制从 ~57MB 显著瘦身,降低安装体积
