[package]
name = "lite-editor"
version = "0.1.0"
edition = "2021"

[lib]
name = "lite_editor_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "lite-editor"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
quick-xml = "0.36"
