# 过渡期旧 Nib(Tauri 壳)。刻意不加入根 workspace(独立 Cargo.lock):
# 隔离 tauri 与 gpui 两棵依赖树,升级互不扰动(RFC v2 §3)。
[package]
name = "lite-editor"
version = "0.1.0"
edition = "2021"

[lib]
name = "lite_editor_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "lite-editor"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
nib-core = { path = "../crates/nib-core" }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"
libc = "0.2"
dirs = "5"

[workspace]
