[package]
name = "nib-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
ignore = "0.4"
quick-xml = "0.36"
tokio = { version = "1", features = ["full"] }
notify = "6"
rayon = "1"
libc = "0.2"
reqwest = { version = "0.12", features = ["json", "native-tls"] }
md-5 = "0.10"
hex = "0.4"
dirs = "5"
comrak = { version = "0.52.0", default-features = false }
similar = "2"
regex = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = ["NSPasteboard", "NSPasteboardItem"] }
objc2-foundation = { version = "0.3.2", features = ["NSString", "NSArray", "NSURL"] }
